--- a/Main.css
+++ b/Main.css
@@ -23,16 +23,21 @@ table,tr,td{
 #logo{
   background-color:rgb(255,255,255);
   width:20%;
+  height:10%;
   text-align:center;
+}
+#logoimg{
+  height:125px;
+  width:125px;
 }
 #regis{
   text-align: center;
   font-size: 200%;
   position: absolute;
-  top: 40%;
+  top: 25%;
   left: 32.5%;
   width: 35%;
-  height: 30%;
+  height: 40%;
 }
 fieldset{
   border: 10px solid #CFA616;
@@ -42,7 +47,9 @@ form{
 }
 #botton{
   background-color:#CFA616;
-  border-radius:8%;
+  border-radius:15%;
+  position: relative;
+  top: 5px;
   width:20%;
   height:20%;
 }
